--- a/global/global.css
+++ b/global/global.css
@@ -10,23 +10,179 @@
 :root {
   --1: #F3CA52;
   --2: #F6E9B2;
-  --3: #0A6847;
-  --4: #7ABA78;
+  --3: #0D5D56;
+  --4: #AEE1A6;
+  --1a: #d0ae47;
+  --2a: #c9bf92;
+  --3a: #083c38;
+  --4a: #8bb585;
+}
+
+/* local header / footer styles */
+header {
+  position: sticky;
+  top: 0;
+
+  height: 65px;
+
+  padding: 0 3vw;
+  gap: 3vw;
+  z-index: 999;
+}
+
+#header-logo {
+  height: 35px;
+  width: 35px;
+}
+
+#search-bar {
+  /* display: none; */
+  padding: 8px 12px;
+  max-width: 800px;
+}
+
+#search-bar img {
+  width: 20px;
+  height: 20px;
+}
+
+#header-button-wrapper div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--2);
+  height: 35px;
+  width: 35px;
+  border-radius: 5px;
+}
+
+#header-button-wrapper div img {
+  width: 20px;
+  height: 20px;
+}
+
+/* carousel */
+.carousel {
+  overflow: hidden;
+}
+
+.modal-sizing {
+  width: 50%;
+  height: 100%;
+  border-radius: 10px 0 0 10px;
+}
+
+.page-sizing {
+  height: 50vh;
+}
+
+.carousel img {
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
+
+.slider-nav {
+  column-gap: 1rem;
+  bottom: 1.25rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+.slider-nav button {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.75;
+  border: none;
+  cursor: pointer;
+  box-shadow:  1px 0px 8px 0px;
+  transition: opacity ease 250ms;
+}
+
+.slider-nav button.active {
+  opacity: 1;
+}
+
+/* login */
+#login-form {
+  display: none;
+  position: fixed;
+  z-index: 2000;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.form-wrapper {
+  width: 800px;
+  max-width: 100vw;
+  height: 450px;
+  overflow: hidden;
+}
+
+.form {
+  width: 300px;
+  padding: 0 0 10px 3vw ;
+}
+
+.form-input-wrapper {
+  height: 270px;
+}
+
+.form-input {
+  gap: 15px;
+}
+
+.form-input input{
+  flex: 1;
+  border-bottom: 1px solid var(--1);
+  color: var(--4);
+  font-size: 15px;
+  font-family: "noir";
+}
+
+.form-input button{
+  flex: 1;
+  border-radius: 5px;
+  background-color: var(--1);
+  padding: 8px 0 3px 0;
+  font-size: 15px;
+  font-family: "noir";
 }
 
 /* fonts */
 @font-face {
-  font-family: 'fonseca-bold';
-  src: url(../global/assets/fonts/Fonseca-Bold.otf);
+  font-family: 'fonseca';
+  src: url(fonts/Fonseca-Bold.otf);
 }
 
-.fonsecab {
-  font-family: 'fonseca-bold';
+.fonseca {
+  font-family: 'fonseca';
 }
 
 @font-face {
-  font-family: 'noir-medium';
-  src: url(../global/assets/fonts/Noir_medium.otf);
+  font-family: 'fonseca-mid';
+  src: url(fonts/Fonseca-Regular.otf);
+}
+
+.fonseca-mid {
+  font-family: 'fonseca-mid';
+}
+
+@font-face {
+  font-family: 'fonseca-thin';
+  src: url(../global/fonts/Fonseca-Thin.otf);
+}
+
+.fonseca-thin {
+  font-family: 'fonseca-thin';
+}
+
+@font-face {
+  font-family: 'noir';
+  src: url(../global/fonts/Noir_medium.otf);
 }
 
 .noir {
@@ -35,11 +191,24 @@
 
 @font-face {
   font-family: 'moorley';
-  src: url(../global/assets/fonts/Moorley\ Hoosten.ttf);
+  src: url(../global/fonts/Moorley\ Hoosten.ttf);
 }
 
 .moorley {
   font-family: 'moorley';
+}
+
+.helve {
+  font-family: Helvetica, sans-serif;
+}
+
+@font-face {
+  font-family: 'montserrat';
+  src: url(../global/fonts/Montserrat-Medium.ttf);
+}
+
+.mont {
+  font-family: montserrat;
 }
 
 /* imgs */
@@ -62,9 +231,49 @@ img {
   min-width: 100%;
 }
 
+.rest-img {
+  max-width: 100%;
+}
+
+.img20 {
+  height: 20px;
+  width: 20px;
+}
+
+.imgh20 {
+  height: 20px;
+}
+
+.img25 {
+  height: 25px;
+  width: 25px;
+}
+
+.img30 {
+  height: 30px;
+  width: 30px;
+}
+
+.img40 {
+  height: 40px;
+  width: 40px;
+}
+
+.img50 {
+  height: 50px;
+  width: 50px;
+}
+
+.ar1 {
+  aspect-ratio: 1/1;
+}
+
 /* display */
 .rad5 {
   border-radius: 5px;
+}
+.rad10 {
+  border-radius: 10px;
 }
 
 .vcontainer {
@@ -76,8 +285,29 @@ img {
   display: flex;
 }
 
+.none {
+  display: none;
+}
+
 .center {
   align-items: center;
+}
+
+.down {
+  align-items: flex-end;
+}
+
+.left {
+  align-items: start;
+  justify-content: left;
+}
+
+.right {
+  align-items: flex-end;
+}
+
+.jcenter {
+  justify-content: center;
 }
 
 .sbet {
@@ -100,11 +330,56 @@ img {
   flex: 1;
 }
 
+.f2 {
+  flex: 2;
+}
+
+.f3 {
+  flex: 3;
+}
+
+.gap5 {
+  gap: 5px;
+}
+
+.gap15 {
+  gap: 15px;
+}
+
+.gap20 {
+  gap: 20px;
+}
+
+.gap25 {
+  gap: 25px;
+}
+
 .w100 {
   width: 100%;
 }
 
+.h100 {
+  height: 100%;
+}
+
 /* padding & margins */
+
+.pad15 {
+  padding: 15px;
+}
+
+.pad15a {
+  padding: 0 15px;
+}
+
+.pad15b {
+  padding: 15px 0;
+}
+
+.pad10 {
+  padding: 10px;
+}
+
 .pad5 {
   padding: 5px;
 }
@@ -118,6 +393,14 @@ img {
 }
 
 /* colors */
+.col-tsp {
+  color: transparent;
+}
+
+.bcol-tsp {
+  background-color: transparent;
+}
+
 .col1 {
   color: var(--1);
 }
@@ -150,10 +433,17 @@ img {
   background-color: var(--4);
 }
 
+.col5 {
+  color: var(--5);
+}
+
+.bcol5 {
+  background-color: var(--5);
+}
+
 /* style resets */
 .res-input {
   border: none;
-  background-color: transparent;
 }
 
 .res-input:focus {
@@ -162,7 +452,6 @@ img {
 
 .res-button {
   border: none;
-  background-color: transparent;
 }
 
 .res-scroll::-webkit-scrollbar {
@@ -174,4 +463,141 @@ img {
   /* removes scrollbar */
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+
+.ovx-a {
+  overflow-x: auto;
+}
+
+.ovy-a {
+  overflow-y: auto;
+}
+
+/* button styling */
+
+.button {
+  transition: background-color 0.2s ease;
+  transition: color 0.2s ease;
+}
+
+.button.bcol1:hover {
+  background-color: var(--1a);
+}
+.button.bcol2:hover {
+  background-color: var(--2a);
+}
+.button.bcol3:hover {
+  background-color: var(--3a);
+}
+.button.bcol4:hover {
+  background-color: var(--4a);
+}
+.button.bcol5:hover {
+  background-color: var(--5a);
+}
+
+.button.col1:hover {
+  color: var(--1a);
+}
+.button.col2:hover {
+  color: var(--2a);
+}
+.button.col3:hover {
+  color: var(--3a);
+}
+.button.col4:hover {
+  color: var(--4a);
+}
+.button.col5:hover {
+  color: var(--5a);
+}
+
+.hov-ul:hover {
+  text-decoration: underline;
+}
+
+.hov-lt:hover {
+  text-decoration: line-through;
+}
+
+/* text sizes */
+.ts50 {
+  font-size: 50px;
+}
+
+.ts40 {
+  font-size: 40px;
+}
+
+.ts30 {
+  font-size: 30px;
+}
+
+.ts25 {
+  font-size: 25px;
+}
+
+.ts20 {
+  font-size: 20px;
+}
+
+.ts15 {
+  font-size: 15px;
+}
+
+.ts10 {
+  font-size: 10px;
+}
+
+.ts5 {
+  font-size: 5px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.bolder {
+  font-weight: bolder;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.elipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.nowrap {
+  white-space: nowrap;
+}
+
+.lineh5 {
+  line-height: 5px;
+}
+.lineh10 {
+  line-height: 10px;
+}
+.lineh15 {
+  line-height: 15px;
+}
+.lineh20 {
+  line-height: 20px;
+}
+.lineh30 {
+  line-height: 30px;
+}
+.lineh40 {
+  line-height: 40px;
+}
+.lineh50 {
+  line-height: 50px;
+}
+
+/* true styles */
+.true-wrapper {
+  min-height: 100vh;
 }
