--- a/login/login.css
+++ b/login/login.css
@@ -8,12 +8,12 @@
 
 @font-face {
     font-family: 'fonseca';
-    src: url(../global/assets/fonts/Fonseca-Regular.otf);
+    src: url(../global/fonts/Fonseca-Regular.otf);
 }
 
 @font-face {
     font-family: 'noir-medium';
-    src: url(../global/assets/fonts/Noir_medium.otf);
+    src: url(../global/fonts/Noir_medium.otf);
 }
 
 #container_right {
@@ -115,42 +115,15 @@ a {
     word-wrap: break-word
 }
 
-#carousel {
-    position: relative;
-    bottom: 0;
-    height: 102.3vh;
-    width: 50vw;
-    overflow: hidden;
-    align-self: center;
-    margin-top: -30px;
-    margin-bottom: -50px;
-    margin-left: -30px;
-}
 
-#slider {
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 100%;
-}
-
-#slider img {
-    width: auto;
-    height: auto;
+.carousel img {
     min-width: 100%;
     min-height: 100%;
-    max-width: none;
-    max-height: none;
     object-fit: cover;
 }
 
 .slider-nav {
-    border: 1px solid black;
-    background: rgba(255, 255, 255, 50%);
-    padding: 0.3rem;
-    display: flex;
     column-gap: 1rem;
-    position: absolute;
     bottom: 1.25rem;
     left: 50%;
     transform: translateX(-50%);
@@ -159,15 +132,23 @@ a {
 
 .slider-nav button {
     width: 0.5rem;
-    height: 0.8rem;
+    height: 0.5rem;
     border-radius: 50%;
     background-color: #fff;
     opacity: 0.75;
-    transition: opacity ease 250ms;
-    border: 1px solid black;
+    border: none;
     cursor: pointer;
+    box-shadow:  1px 0px 8px 0px;
+    transition: opacity ease 250ms;
 }
 
 .slider-nav button.active {
     opacity: 1;
+}
+
+.carousel {
+    width: 50vw;
+    max-height: 100vh;
+    aspect-ratio: 1/1;
+    overflow: hidden;
 }
