--- a/login/login.css
+++ b/login/login.css
@@ -115,15 +115,42 @@ a {
     word-wrap: break-word
 }
 
+#carousel {
+    position: relative;
+    bottom: 0;
+    height: 102.3vh;
+    width: 50vw;
+    overflow: hidden;
+    align-self: center;
+    margin-top: -30px;
+    margin-bottom: -50px;
+    margin-left: -30px;
+}
 
-.carousel img {
+#slider {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+#slider img {
+    width: auto;
+    height: auto;
     min-width: 100%;
     min-height: 100%;
+    max-width: none;
+    max-height: none;
     object-fit: cover;
 }
 
 .slider-nav {
+    border: 1px solid black;
+    background: rgba(255, 255, 255, 50%);
+    padding: 0.3rem;
+    display: flex;
     column-gap: 1rem;
+    position: absolute;
     bottom: 1.25rem;
     left: 50%;
     transform: translateX(-50%);
@@ -132,23 +159,15 @@ a {
 
 .slider-nav button {
     width: 0.5rem;
-    height: 0.5rem;
+    height: 0.8rem;
     border-radius: 50%;
     background-color: #fff;
     opacity: 0.75;
-    border: none;
-    cursor: pointer;
-    box-shadow:  1px 0px 8px 0px;
     transition: opacity ease 250ms;
+    border: 1px solid black;
+    cursor: pointer;
 }
 
 .slider-nav button.active {
     opacity: 1;
-}
-
-.carousel {
-    width: 50vw;
-    max-height: 100vh;
-    aspect-ratio: 1/1;
-    overflow: hidden;
 }
