--- a/cart & payment/cartpayment.css
+++ b/cart & payment/cartpayment.css
@@ -1,5 +1,20 @@
+@font-face {
+  font-family: 'noir-medium';
+  src: url(../global/fonts/Noir_medium.otf);
+}
+
 body {
     background-color: #F6E9B2;
+}
+
+@font-face {
+  font-family: 'fonsesca-bold';
+  src: url(../global/fonts/Fonseca-Bold.otf);
+}
+
+@font-face {
+  font-family: 'noir-medium';
+  src: url(../global/fonts/Noir_medium.otf);
 }
 
 .container {
@@ -82,7 +97,7 @@ body {
     margin-left: 50px;
     margin-top: 30px;
     position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: noir-medium, sans-serif;
 }
 
 .shoppingCart {
@@ -176,13 +191,14 @@ body {
     /* position: absolute; */
     /* border-style: solid; */
     color: #ffffff;
+    font-family: noir-medium, sans-serif;
 }
 
 .itemQuantity {
     margin-top: -26px;
     margin-right: 15px;
     color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: noir-medium, sans-serif;
     font-size: 23px;
     float: right;
 }
@@ -329,7 +345,7 @@ body {
     font-size: 28px;
     margin-left: 20px;
     margin-top: 28px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: noir-medium, sans-serif;
 }
 
 .garisCheckout {
@@ -342,7 +358,7 @@ body {
     margin-top: -60px;
     color: #ffffff;
     font-size: 28px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: noir-medium, sans-serif;
 }
 
 .proceedButton {
