--- a/profile/profile.css
+++ b/profile/profile.css
@@ -210,6 +210,11 @@ input[type="text"]:focus {
   margin-top: 10px;
 }
 
+.bio{
+  margin-top: 10px;
+  margin-left: 21px;
+}
+
 .bio-image-container {
   width: 301px;
   height: 696px;
@@ -321,9 +326,6 @@ input[type="text"]:focus {
   border-radius: 9999px;
   transform: translate(-270px, 0);
 }
-
-
-
 
 #alamat {
   margin-top: 60px;
