--- a/admin/admin.css
+++ b/admin/admin.css
@@ -1,50 +1,3 @@
-header {
-  position: sticky;
-  top: 0;
-
-  height: 65px;
-
-  padding: 0 3vw;
-  gap: 3vw;
-  z-index: 999;
-}
-
-
-.logo {
-  height: 35px;
-  width: 35px;
-}
-
-#search-bar {
-  /* display: none; */
-  padding: 8px 12px;
-  max-width: 800px;
-}
-
-#search-bar img {
-  width: 20px;
-  height: 20px;
-}
-
-#header-button-wrapper {
-  gap: 15px;
-}
-
-#header-button-wrapper div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--2);
-  height: 35px;
-  width: 35px;
-  border-radius: 5px;
-}
-
-#header-button-wrapper div img {
-  width: 20px;
-  height: 20px;
-}
-
 #nav-container {
   width: 200px;
 }
@@ -62,14 +15,6 @@ header {
   height: 20px;
 }
 
-.classifier p {
-  font-family: "montserrat";
-}
-
-.id {
-  width: 8%;
-}
-
 .name {
   width: 22%;
 }
@@ -80,6 +25,13 @@ header {
 
 .desc {
   width: 55%;
+}
+
+.item {
+  align-items: center;
+  padding: 15px 0 0 0;
+  overflow-y: auto;
+  font-family: "noir";    
 }
 
 /* modal */
