--- a/global/global.css
+++ b/global/global.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   text-decoration: none;
@@ -50,10 +50,13 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--2);
   height: 35px;
   width: 35px;
   border-radius: 5px;
+}
+
+#account {
+  border-radius: 25px;
 }
 
 #header-button-wrapper div img {
@@ -68,7 +71,7 @@ header {
 
 .modal-sizing {
   width: 50%;
-  height: 100%;
+  height: 450px;
   border-radius: 10px 0 0 10px;
 }
 
@@ -98,7 +101,7 @@ header {
   opacity: 0.75;
   border: none;
   cursor: pointer;
-  box-shadow:  1px 0px 8px 0px;
+  box-shadow: 1px 0px 8px 0px;
   transition: opacity ease 250ms;
 }
 
@@ -110,9 +113,10 @@ header {
 #login-form {
   display: none;
   position: fixed;
-  z-index: 2000;
-  overflow: auto;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
 }
 
 .form-wrapper {
@@ -120,11 +124,13 @@ header {
   max-width: 100vw;
   height: 450px;
   overflow: hidden;
+
+  z-index: 1001;
 }
 
 .form {
   width: 300px;
-  padding: 0 0 10px 3vw ;
+  padding: 0 0 10px 3vw;
 }
 
 .form-input-wrapper {
@@ -135,7 +141,7 @@ header {
   gap: 15px;
 }
 
-.form-input input{
+.form-input input {
   flex: 1;
   border-bottom: 1px solid var(--1);
   color: var(--4);
@@ -143,7 +149,7 @@ header {
   font-family: "noir";
 }
 
-.form-input button{
+.form-input button {
   flex: 1;
   border-radius: 5px;
   background-color: var(--1);
@@ -272,6 +278,7 @@ img {
 .rad5 {
   border-radius: 5px;
 }
+
 .rad10 {
   border-radius: 10px;
 }
@@ -483,15 +490,19 @@ img {
 .button.bcol1:hover {
   background-color: var(--1a);
 }
+
 .button.bcol2:hover {
   background-color: var(--2a);
 }
+
 .button.bcol3:hover {
   background-color: var(--3a);
 }
+
 .button.bcol4:hover {
   background-color: var(--4a);
 }
+
 .button.bcol5:hover {
   background-color: var(--5a);
 }
@@ -499,15 +510,19 @@ img {
 .button.col1:hover {
   color: var(--1a);
 }
+
 .button.col2:hover {
   color: var(--2a);
 }
+
 .button.col3:hover {
   color: var(--3a);
 }
+
 .button.col4:hover {
   color: var(--4a);
 }
+
 .button.col5:hover {
   color: var(--5a);
 }
@@ -578,21 +593,27 @@ img {
 .lineh5 {
   line-height: 5px;
 }
+
 .lineh10 {
   line-height: 10px;
 }
+
 .lineh15 {
   line-height: 15px;
 }
+
 .lineh20 {
   line-height: 20px;
 }
+
 .lineh30 {
   line-height: 30px;
 }
+
 .lineh40 {
   line-height: 40px;
 }
+
 .lineh50 {
   line-height: 50px;
 }
