--- a/menu.css
+++ b/menu.css
@@ -1,84 +1,3 @@
-header {
-  position: sticky;
-  top: 0;
-
-  height: 65px;
-
-  padding: 0 3vw;
-  gap: 3vw;
-  z-index: 999;
-}
-
-.logo {
-  height: 35px;
-  width: 35px;
-}
-
-#search-bar {
-  /* display: none; */
-  padding: 8px 12px;
-  max-width: 800px;
-}
-
-#search-bar img {
-  width: 20px;
-  height: 20px;
-}
-
-#header-button-wrapper {
-  gap: 15px;
-}
-
-#header-button-wrapper div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--2);
-  height: 35px;
-  width: 35px;
-  border-radius: 5px;
-}
-
-#header-button-wrapper div img {
-  width: 20px;
-  height: 20px;
-}
-
-.carousel {
-  height: 50vh;
-  overflow: hidden;
-}
-
-.carousel img {
-  min-width: 100%;
-  min-height: 100%;
-  object-fit: cover;
-}
-
-.slider-nav {
-  column-gap: 1rem;
-  bottom: 1.25rem;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
-}
-
-.slider-nav button {
-  width: 0.5rem;
-  height: 0.5rem;
-  border-radius: 50%;
-  background-color: #fff;
-  opacity: 0.75;
-  border: none;
-  cursor: pointer;
-  box-shadow:  1px 0px 8px 0px;
-  transition: opacity ease 250ms;
-}
-
-.slider-nav button.active {
-  opacity: 1;
-}
-
 #main-container {
   padding: calc(0px + max(3vw, 50px)) 3vw;
   gap: 3vw;
@@ -106,7 +25,7 @@ header {
 }
 
 .menu-nav button:hover p{
-  text-decoration: underline;
+  text-decoration: underline 2px;
 }
 
 .subcat-name {
@@ -151,12 +70,15 @@ header {
   text-overflow: ellipsis;
 
   font-size: 10px;
+  color: #FFFFFF;
 }
 
 .item-name {
   font-size: 25px;
   font-family: 'fonseca';
   transition: transform 0.15s ease;
+  color: #FFFFFF;
+  text-shadow: 2px 4px 0px #333333;
 }
 
 .cart-wrapper {
@@ -197,4 +119,50 @@ header {
 
 #checkout-button p {
   transform: translateY(3px);
+}
+
+#addons-form {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+#addons-form .form-wrapper {
+
+  padding: 30px;
+  gap: 30px;
+  overflow: hidden;
+}
+
+.left-wrapper {
+  width: 55%;
+}
+
+.right-wrapper {
+  width: 45%;
+}
+
+#addons-form .form-wrapper img {
+  width: 100%;
+  overflow: hidden;
+}
+
+#addons-form p {
+  padding: 6px 10px 0 10px;
+}
+
+.img-container {
+  overflow: hidden;
+  position: relative;
+}
+
+.item-name-overlay {
+  bottom: 0;
+}
+
+#addons-modal-content {
+  height: 250px;
+  overflow-y: auto;
 }
