--- a/profile/profile.css
+++ b/profile/profile.css
@@ -20,6 +20,7 @@
 /* global element styles */
 header {
   top: 0;
+  width: 100%;
   height: 65px;
   padding: 0 3vw;
   gap: 3vw;
@@ -41,162 +42,38 @@ header .button-wrapper div {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 35px;
-  width: 35px;
 }
 
-/* carousel */
-.carousel {
-  overflow: hidden;
-}
+/* display sizing */
+.add, .add720, .add1280 {display: none;}
+@media (max-width: 600px) {
+    .rem {display: none;}
+    .add {display: flex;}}
 
-.modal-sizing {
-  width: 50%;
-  height: 450px;
-  border-radius: 10px 0 0 10px;
-}
+@media (max-width: 720px) {
+    .rem720 {display: none;}
+    .add720 {display: flex;}}
 
-.page-sizing {
-  height: 50vh;
-}
+@media (max-width: 1280px) {
+    .rem1280 {display: none;}
+    .add1280 {display: flex;}}
 
-.carousel img {
-  min-width: 100%;
-  min-height: 100%;
-  object-fit: cover;
-}
-
-.slider-nav {
-  column-gap: 1rem;
-  bottom: 1.25rem;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
-}
-
-.slider-nav button {
-  width: 0.5rem;
-  height: 0.5rem;
-  border-radius: 50%;
-  background-color: #fff;
-  opacity: 0.75;
-  border: none;
-  cursor: pointer;
-  box-shadow: 1px 0px 8px 0px;
-  transition: opacity ease 250ms;
-}
-
-.slider-nav button.active {
-  opacity: 1;
-}
-
-/* login */
-#login-form {
-  display: none;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1000;
-}
-
-.form-wrapper {
-  width: 800px;
-  max-width: 100vw;
-  height: 450px;
-  overflow: hidden;
-
-  z-index: 1001;
-}
-
-.form {
-  width: 300px;
-  padding: 0 0 10px 3vw;
-}
-
-.form-input-wrapper {
-  height: 270px;
-}
-
-.form-input {
-  gap: 15px;
-}
-
-.form-input input {
-  flex: 1;
-  border-bottom: 1px solid var(--1);
-  color: var(--4);
-  font-size: 15px;
-  font-family: "noir";
-}
-
-.form-input button {
-  flex: 1;
-  border-radius: 5px;
-  background-color: var(--1);
-  padding: 8px 0 3px 0;
-  font-size: 15px;
-  font-family: "noir";
-}
+.imgh20 {
+  height: 20px;}
+.imgh30 {
+  height: 30px;}
+.imgh35 {
+  height: 35px;}
+.imgh40 {
+  height: 40px;}
 
 /* fonts */
-@font-face {
-  font-family: 'fonseca';
-  src: url(fonts/Fonseca-Bold.otf);
-}
-
-.fonseca {
-  font-family: 'fonseca';
-}
-
-@font-face {
-  font-family: 'fonseca-mid';
-  src: url(fonts/Fonseca-Regular.otf);
-}
-
-.fonseca-mid {
-  font-family: 'fonseca-mid';
-}
-
-@font-face {
-  font-family: 'fonseca-thin';
-  src: url(../global/fonts/Fonseca-Thin.otf);
-}
-
-.fonseca-thin {
-  font-family: 'fonseca-thin';
-}
-
-@font-face {
-  font-family: 'noir';
-  src: url(../global/fonts/Noir_medium.otf);
-}
-
-.noir {
-  font-family: 'noir';
-}
-
-@font-face {
-  font-family: 'moorley';
-  src: url(../global/fonts/Moorley\ Hoosten.ttf);
-}
-
-.moorley {
-  font-family: 'moorley';
-}
 
 @font-face {
   font-family: 'montserrat';
   src: url(../global/fonts/Montserrat-Medium.ttf);
-}
-
-.mont {
-  font-family: montserrat;
-}
-
-.helve {
-  font-family: Helvetica, sans-serif;
-}
+}.mont {font-family: montserrat;}
+.helve {font-family: Helvetica, sans-serif;}
 
 /* imgs */
 img {
@@ -205,76 +82,14 @@ img {
   -webkit-user-modify: read-only;
 }
 
-.fit-img {
-  min-width: 100%;
-  min-height: 100%;
-}
-
-.wmin-img {
-  min-width: 100%;
-}
-
-.wmax-img {
-  max-width: 100%;
-}
-
-.hmin-img {
-  min-height: 100%;
-}
-
-.hmax-img {
-  max-height: 100%;
-}
-
-.imgh20 {
-  height: 20px;
-}
-
-.img50 {
-  height: 50px;
-  width: 50px;
-}
-
-.img45 {
-  height: 45px;
-  width: 45px;
-}
-
-.img40 {
-  height: 40px;
-  width: 40px;
-}
-
 .img35 {
   height: 35px;
   width: 35px;
 }
 
-.img30 {
-  height: 30px;
-  width: 30px;
-}
-
-.img25 {
-  height: 25px;
-  width: 25px;
-}
-
 .img20 {
   height: 20px;
   width: 20px;
-}
-
-.ar2-1 {
-  aspect-ratio: 2/1;
-}
-
-.ar1-2 {
-  aspect-ratio: 1/2;
-}
-
-.ar1 {
-  aspect-ratio: 1/1;
 }
 
 /* display */
@@ -290,39 +105,13 @@ img {
   border-radius: 5px;
 }
 
-.vcontainer {
-  display: flex;
-  flex-direction: column;
-}
-
 .container {
   display: flex;
-}
-
-.none {
-  display: none;
 }
 
 .center {
   align-items: center;
 }
-
-.up {
-  align-items: flex-start;
-}
-
-.down {
-  align-items: flex-end;
-}
-
-.left {
-  align-items: start;
-}
-
-.right {
-  align-items: end;
-}
-
 .jcenter {
   justify-content: center;
 }
@@ -331,56 +120,20 @@ img {
   justify-content: space-between;
 }
 
-.seve {
-  justify-content: space-evenly;
-}
-
-.pos-rel {
-  position: relative;
-}
-
-.pos-abs {
-  position: absolute;
-}
-
 .pos-stk {
   position: sticky;
-}
-
-.f3 {
-  flex: 3;
-}
-
-.f2 {
-  flex: 2;
 }
 
 .f1 {
   flex: 1;
 }
 
-.gap25 {
-  gap: 25px;
-}
-
-.gap20 {
-  gap: 20px;
-}
-
 .gap15 {
   gap: 15px;
 }
 
-.gap5 {
-  gap: 5px;
-}
-
 .w100 {
   width: 100%;
-}
-
-.h100 {
-  height: 100%;
 }
 
 /* padding & margins */
@@ -735,39 +488,23 @@ body {
   -webkit-user-select: none;
 } */
 
-header {
-  position: sticky;
-  top: 0;
+header .search-bar {
+  padding: 8px 12px;
+  max-width: 800px;
+}
 
+header .search-bar img,
+header .button-wrapper div img {
+  width: 20px;
+  height: 20px;
+}
+
+header .button-wrapper div {
   display: flex;
   align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-
-  width: 93.5%;
-  height: 65px;
-  padding: 0 3vw;
-  gap: 3vw;
-
-  background-color: #0D5D56;
-  z-index: 999;
-}
-
-.logo img {
-  width: 35px;
+  justify-content: center;
   height: 35px;
-}
-
-#search-bar {
-  display: none;
-  align-items: center;
-  flex: 1;
-
-  max-width: 800px;
-  padding: 8px 12px;
-
-  border-radius: 5px;
-  background-color: #fff;
+  width: 35px;
 }
 
 input[type="text"] {
@@ -780,42 +517,6 @@ input[type="text"] {
 
 input[type="text"]:focus {
   outline: none;
-}
-
-#search-bar input[type="text"] {
-  flex: 1;
-}
-
-#search-bar img {
-  height: 20px;
-  width: 20px;
-}
-
-.header-button-wrapper {
-  display: flex;
-  gap: 15px;
-}
-
-.header-button-wrapper div {
-  display: none;
-  align-items: center;
-  justify-content: center;
-
-  height: 35px;
-  width: 35px;
-
-  border-radius: 5px;
-
-  background-color: #fff;
-}
-
-.header-button-wrapper div img {
-  width: 20px;
-  height: 20px;
-}
-
-#login-header-button {
-  display: flex;
 }
 
 .promo {
@@ -1054,15 +755,20 @@ input[type="text"]:focus {
 .alamat-input {
   display: none;
   width: 400px;
+  height: 100px;
   color: black;
   font-size: 20px;
   font-family: noir-medium, sans-serif;
   font-weight: 500;
   word-wrap: break-word;
+  background-color: #F3CA52;
+  outline: none;
 }
 
+/* Address */
 .edit_button,
-.confirm_button {
+.confirm_button,
+.cancel_button{
   transform: translate(60px, 0);
   background-color: #000;
   color: #fff;
@@ -1077,7 +783,15 @@ input[type="text"]:focus {
 .confirm_button {
   display: none;
 }
-
+.cancel{
+  color: black;
+  background: none;
+  border: none;
+  display: none;
+}
+.cancel_button{
+  display:none;
+}
 .rekening {
   width: 155px;
   height: 24px;
