--- a/cart/style.css
+++ b/cart/style.css
@@ -29,13 +29,9 @@ header .button-wrapper div {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 35px;
-    width: 35px;
+    padding: 8px;
 }
 
-header #h-img-2 {
-    display: none;
-}
 
 @media (max-width: 600px) {
     header #h-img-1 {
@@ -44,13 +40,6 @@ header #h-img-2 {
     header #h-img-2 {
         display: flex;
     }
-}
-
-.container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    position: relative;
 }
 
 .main {
@@ -100,6 +89,10 @@ header #h-img-2 {
 
 .shoppingCartTop {
     display: flex;
+}
+
+.shopping-cart h2 {
+    padding-bottom: 10px;
 }
 
 .back-button {
@@ -197,6 +190,7 @@ header #h-img-2 {
 
 .payment-methods h2 {
     margin-top: 0;
+    padding-bottom: 10px;
 }
 
 .payment-option-dana{
@@ -243,24 +237,14 @@ header #h-img-2 {
     cursor: pointer;
 }
 
-.payment-option-dana img {
+.payment-option-dana img, .payment-option-ovo img, .payment-option-shopeePay img{
     width: 125px;
     height: auto;
 }
-
 .payment-option-gopay img {
-    width: 175px;
-    height: 45px;
-}
-
-.payment-option-ovo img {
-    width: 125px;
-    height: auto;
-}
-
-.payment-option-shopeePay img {
-    width: 125px;
-    height: auto;
+    object-fit: contain;
+    height: 50px;
+    
 }
 
 .payment-option-debit img {
