--- a/profile/profile.css
+++ b/profile/profile.css
@@ -3,438 +3,15 @@
   src: url(../global/fonts/Noir_medium.otf);
 }
 
-/*global*/
-
-/* variables */
-:root {
-  --1: #F3CA52;
-  --2: #F6E9B2;
-  --3: #0D5D56;
-  --4: #AEE1A6;
-  --1a: #d0ae47;
-  --2a: #c9bf92;
-  --3a: #083c38;
-  --4a: #8bb585;
+header *{
+    margin: 0;
+    text-decoration: none;
+    box-sizing: border-box;
+    user-select: none;
 }
 
-/* global element styles */
 header {
-  top: 0;
-  width: 100%;
-  height: 65px;
-  padding: 0 3vw;
-  gap: 3vw;
-  z-index: 50;
-}
-
-header .search-bar {
-  padding: 8px 12px;
-  max-width: 800px;
-}
-
-header .search-bar img,
-header .button-wrapper div img {
-  width: 20px;
-  height: 20px;
-}
-
-header .button-wrapper div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/* display sizing */
-.add, .add720, .add1280 {display: none;}
-@media (max-width: 600px) {
-    .rem {display: none;}
-    .add {display: flex;}}
-
-@media (max-width: 720px) {
-    .rem720 {display: none;}
-    .add720 {display: flex;}}
-
-@media (max-width: 1280px) {
-    .rem1280 {display: none;}
-    .add1280 {display: flex;}}
-
-.imgh20 {
-  height: 20px;}
-.imgh30 {
-  height: 30px;}
-.imgh35 {
-  height: 35px;}
-.imgh40 {
-  height: 40px;}
-
-/* fonts */
-
-@font-face {
-  font-family: 'montserrat';
-  src: url(../global/fonts/Montserrat-Medium.ttf);
-}.mont {font-family: montserrat;}
-.helve {font-family: Helvetica, sans-serif;}
-
-/* imgs */
-img {
-  object-fit: cover;
-  -webkit-user-drag: none;
-  -webkit-user-modify: read-only;
-}
-
-.img35 {
-  height: 35px;
-  width: 35px;
-}
-
-.img20 {
-  height: 20px;
-  width: 20px;
-}
-
-/* display */
-.rad15 {
-  border-radius: 15px;
-}
-
-.rad10 {
-  border-radius: 10px;
-}
-
-.rad5 {
-  border-radius: 5px;
-}
-
-.container {
-  display: flex;
-}
-
-.center {
-  align-items: center;
-}
-.jcenter {
-  justify-content: center;
-}
-
-.sbet {
-  justify-content: space-between;
-}
-
-.pos-stk {
-  position: sticky;
-}
-
-.f1 {
-  flex: 1;
-}
-
-.gap15 {
-  gap: 15px;
-}
-
-.w100 {
-  width: 100%;
-}
-
-/* padding & margins */
-.pad15 {
-  padding: 15px;
-}
-
-.pad15a {
-  padding: 0 15px;
-}
-
-.pad15b {
-  padding: 15px 0;
-}
-
-.pad10 {
-  padding: 10px;
-}
-
-.pad10a {
-  padding: 0 10px;
-}
-
-.pad10b {
-  padding: 10px 0;
-}
-
-.pad5 {
-  padding: 5px;
-}
-
-.pad5a {
-  padding: 0 5px;
-}
-
-.pad5b {
-  padding: 5px 0;
-}
-
-/* colors */
-.col-tsp {
-  color: transparent;
-}
-
-.bcol-tsp {
-  background-color: transparent;
-}
-
-.col1 {
-  color: var(--1);
-}
-
-.col2 {
-  color: var(--2);
-}
-
-.col3 {
-  color: var(--3);
-}
-
-.col4 {
-  color: var(--4);
-}
-
-.col5 {
-  color: var(--5);
-}
-
-.bcol1 {
-  background-color: var(--1);
-}
-
-.bcol2 {
-  background-color: var(--2);
-}
-
-.bcol3 {
-  background-color: var(--3);
-}
-
-.bcol4 {
-  background-color: var(--4);
-}
-
-.bcol5 {
-  background-color: var(--5);
-}
-
-/* style resets */
-.res-input {
-  border: none;
-}
-
-.res-input:focus {
-  outline: none;
-}
-
-.res-button {
-  border: none;
-}
-
-.res-scroll::-webkit-scrollbar {
-  display: none;
-}
-
-.res-scroll {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-/* button styling & hover effects */
-.button {
-  transition: all 0.2s ease;
-}
-
-.button.bcol1:hover {
-  background-color: var(--1a);
-}
-
-.button.bcol2:hover {
-  background-color: var(--2a);
-}
-
-.button.bcol3:hover {
-  background-color: var(--3a);
-}
-
-.button.bcol4:hover {
-  background-color: var(--4a);
-}
-
-.button.bcol5:hover {
-  background-color: var(--5a);
-}
-
-.button.col1:hover {
-  color: var(--1a);
-}
-
-.button.col2:hover {
-  color: var(--2a);
-}
-
-.button.col3:hover {
-  color: var(--3a);
-}
-
-.button.col4:hover {
-  color: var(--4a);
-}
-
-.button.col5:hover {
-  color: var(--5a);
-}
-
-.hov-ul:hover {
-  text-decoration: underline;
-}
-
-.hov-lt:hover {
-  text-decoration: line-through;
-}
-
-.hov-dt:hover {
-  text-decoration: dotted;
-}
-
-.hov-db:hover {
-  text-decoration: double;
-}
-
-.hov-ol:hover {
-  text-decoration: overline;
-}
-
-.hov-wv:hover {
-  text-decoration: wavy;
-}
-
-/* text sizes & styles*/
-.ts100 {
-  font-size: 100px;
-}
-
-.ts75 {
-  font-size: 75px;
-}
-
-.ts50 {
-  font-size: 50px;
-}
-
-.ts40 {
-  font-size: 40px;
-}
-
-.ts30 {
-  font-size: 30px;
-}
-
-.ts25 {
-  font-size: 25px;
-}
-
-.ts20 {
-  font-size: 20px;
-}
-
-.ts15 {
-  font-size: 15px;
-}
-
-.ts10 {
-  font-size: 10px;
-}
-
-.ts5 {
-  font-size: 5px;
-}
-
-.bold {
-  font-weight: bold;
-}
-
-.bolder {
-  font-weight: bolder;
-}
-
-.italic {
-  font-style: italic;
-}
-
-.ovx-a {
-  overflow-x: auto;
-}
-
-.ovx-h {
-  overflow-x: hidden;
-}
-
-.ovy-a {
-  overflow-y: auto;
-}
-
-.ovy-h {
-  overflow-y: hidden;
-}
-
-.nowrap {
-  white-space: nowrap;
-}
-
-.elipsis {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.lineh100 {
-  line-height: 100px;
-}
-
-.lineh75 {
-  line-height: 75px;
-}
-
-.lineh50 {
-  line-height: 50px;
-}
-
-.lineh40 {
-  line-height: 40px;
-}
-
-.lineh30 {
-  line-height: 30px;
-}
-
-.lineh25 {
-  line-height: 25px;
-}
-
-.lineh20 {
-  line-height: 20px;
-}
-
-.lineh15 {
-  line-height: 15px;
-}
-
-.lineh10 {
-  line-height: 10px;
-}
-
-.lineh5 {
-  line-height: 5px;
-}
-
-/* true styles */
-.true-wrapper {
-  min-height: 100vh;
+  padding: 3vw;
 }
 
 /*Bukan dari global*/
@@ -461,7 +38,6 @@ body {
 
 .edit-input {
   border: none;
-  /* background-color: pink; */
   display: none;
   width: 461px;
   color: #808080;
@@ -480,43 +56,6 @@ body {
   font-family: noir-medium, sans-serif;
   font-weight: 400;
   word-wrap: break-word;
-}
-
-/* img {
-  -webkit-user-drag: none;
-  -webkit-user-modify: read-only;
-  -webkit-user-select: none;
-} */
-
-header .search-bar {
-  padding: 8px 12px;
-  max-width: 800px;
-}
-
-header .search-bar img,
-header .button-wrapper div img {
-  width: 20px;
-  height: 20px;
-}
-
-header .button-wrapper div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 35px;
-  width: 35px;
-}
-
-input[type="text"] {
-  border: none;
-  background: transparent;
-
-  font-size: 15px;
-  font-weight: 500;
-}
-
-input[type="text"]:focus {
-  outline: none;
 }
 
 .promo {
@@ -591,11 +130,6 @@ input[type="text"]:focus {
   justify-content: center;
   border-radius: 999px;
   margin-top: 10px;
-}
-
-.bio{
-  margin-top: 10px;
-  margin-left: 21px;
 }
 
 .bio-image-container {
@@ -676,7 +210,9 @@ input[type="text"]:focus {
   color: black;
   font-size: 15px;
   font-family: noir-medium, sans-serif;
-  word-wrap: break-word
+  word-wrap: break-word;
+  margin-top: 10px;
+  margin-left: 21px;
 }
 
 .gambar1 {
@@ -1001,52 +537,378 @@ input[type="text"]:focus {
   width: 100%;
 }
 
+
+/* variables */
+:root {
+    --1: #F3CA52;
+    --2: #F6E9B2;
+    --3: #0D5D56;
+    --4: #AEE1A6;
+    --1a: #d0ae47;
+    --2a: #c9bf92;
+    --3a: #083c38;
+    --4a: #8bb585;
+
+    --red: #d01010;
+    --dred: #9a0c0c;
+
+    --white: #fff;
+    --dhite: #d4d4d4;
+}
+
+/* global element styles */
+
+/* header */
 header {
-  display: flex;
-  flex-direction: row;
-  position: sticky;
-  top: 0;
-
-  height: 65px;
-
-  padding: 0 3vw;
-  gap: 3vw;
-  z-index: 999;
+    position: sticky;
+    top: 0;
+    height: 65px;
+    padding: 0 3vw;
+    gap: 3vw;
+    z-index: 50;
+}
+header .search-bar {
+    padding: 8px 12px;
+    max-width: 800px;
+}
+header .search-bar img, header .button-wrapper div img {
+    width: 20px;
+    height: 20px;
+}
+header .button-wrapper div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
 }
 
-#header-logo {
-  height: 35px;
-  width: 35px;
+/* carousel */
+.carousel {overflow: hidden;}
+
+.carousel img {object-fit: cover;}
+
+.slider-nav {
+    column-gap: 1rem;
+    bottom: 1.25rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
 }
 
-#search-bar {
-  display: none;
-  padding: 8px 12px;
-  max-width: 800px;
+.slider-nav button {
+    width: 0.5rem;
+    height: 0.5rem;
+    border-radius: 50%;
+    background-color: var(--white);
+    opacity: 0.75;
+    border: none;
+    cursor: pointer;
+    box-shadow:  1px 0px 8px 0px;
+    transition: opacity ease 250ms;
 }
 
-#search-bar img {
-  width: 20px;
-  height: 20px;
+.slider-nav button.active {opacity: 1}
+
+.modal-wrapper {
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
 }
 
-#header-button-wrapper div {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--2);
-  height: 35px;
-  width: 35px;
-  border-radius: 5px;
+.background {
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1001;
 }
 
-.header-button-wrapper div {
-  display: flex;
-  flex-direction: row;
+.modal {
+    width: 800px;
+    max-width: 100vw;
+
+    height: 450px;
+    max-height: 80vh;
+
+    overflow: hidden;
+
+    z-index: 1002;
 }
 
-#header-button-wrapper div img {
-  width: 20px;
-  height: 20px;
+/* fonts */
+@font-face {
+    font-family: 'fonseca';
+    src: url(fonts/Fonseca-Bold.otf);
+}.fonseca {font-family: 'fonseca';}
+@font-face {
+    font-family: 'fonseca-mid';
+    src: url(fonts/Fonseca-Regular.otf);
+}.fonseca-mid {font-family: 'fonseca-mid';}
+@font-face {
+    font-family: 'fonseca-thin';
+    src: url(../global/fonts/Fonseca-Thin.otf);
+}.fonseca-thin {font-family: 'fonseca-thin';}
+@font-face {
+    font-family: 'noir';
+    src: url(../global/fonts/Noir_medium.otf);
+}.noir {font-family: 'noir';}
+@font-face {
+    font-family: 'moorley';
+    src: url(../global/fonts/Moorley\ Hoosten.ttf);
+}.moorley {font-family: 'moorley';}
+@font-face {
+    font-family: 'montserrat';
+    src: url(../global/fonts/Montserrat-Medium.ttf);
+}.mont {font-family: montserrat;}
+
+.helve {font-family: Helvetica, sans-serif;}
+
+/* display sizing */
+.add, .add720, .add1280 {display: none;}
+@media (max-width: 600px) {
+    .rem {display: none;}
+    .add {display: flex;}}
+
+@media (max-width: 720px) {
+    .rem720 {display: none;}
+    .add720 {display: flex;}}
+
+@media (max-width: 1280px) {
+    .rem1280 {display: none;}
+    .add1280 {display: flex;}}
+
+/* imgs */
+img {
+    object-fit: cover;
+    -webkit-user-drag: none;
+    -webkit-user-modify: read-only;
 }
+
+.fit-img {
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.wmin-img {min-width: 100%;}
+.wmax-img {max-width: 100%;}
+
+.hmin-img {min-height: 100%;}
+.hmax-img {max-height: 100%;}
+
+.imgh20 {
+    height: 20px;}
+.imgh30 {
+    height: 30px;}
+.imgh35 {
+    height: 35px;}
+.imgh40 {
+    height: 40px;}
+
+.img50 {
+    height: 50px;
+    width: 50px;}
+.img45 {
+    height: 45px;
+    width: 45px;}
+.img40 {
+    height: 40px;
+    width: 40px;}
+.img35 {
+    height: 35px;
+    width: 35px;}
+.img30 {
+    height: 30px;
+    width: 30px;}
+.img25 {
+    height: 25px;
+    width: 25px;}
+.img20 {
+    height: 20px;
+    width: 20px;}
+
+.ar2-1 {aspect-ratio: 2/1;}
+.ar1-2 {aspect-ratio: 1/2;}
+.ar1 {aspect-ratio: 1/1;}
+
+/* display */
+.rad15 {border-radius: 15px;}
+.rad10 {border-radius: 10px;}
+.rad5 {border-radius: 5px;}
+
+.vcontainer {
+    display: flex;
+    flex-direction: column;}
+.container {display: flex;}
+.none {display: none;}
+
+.center {align-items: center;}
+.up {align-items: flex-start;}
+.down {align-items: flex-end;}
+.left {align-items: start;}
+.right {align-items: end;}
+
+.jcenter {justify-content: center;}
+.sbet {justify-content: space-between;}
+.seve {justify-content: space-evenly;}
+
+.pos-rel {position: relative;}
+.pos-abs {position: absolute;}
+.pos-stk {position: sticky;}
+.pos-fxd {position: fixed;}
+
+.f3 {flex: 3;}
+.f2 {flex: 2;}
+.f1 {flex: 1;}
+.fwrap{flex-wrap: wrap;}
+.cover {object-fit: cover;}
+
+.gap30 {gap: 30px;}
+.gap25 {gap: 25px;}
+.gap20 {gap: 20px;}
+.gap15 {gap: 15px;}
+.gap10 {gap: 10px;}
+.gap5 {gap: 5px;}
+.rgap20 {row-gap: 20px;}
+.rgap25 {row-gap: 25px;}
+.rgap15 {row-gap: 15px;}
+.rgap5 {row-gap: 5px;}
+
+.w100 {width: 100%;}
+.w50 {width: 50%;}
+.vw50 {width: 50vw;}
+
+.h100 {height: 100%;}
+.h50 {height: 50%;}
+.vh50 {height: 50vh;}
+
+/* padding & margins */
+.pad30 {padding: 30px;}
+.pad15 {padding: 15px;}
+.pad15a {padding: 0 15px;}
+.pad15b {padding: 15px 0;}
+
+.pad10 {padding: 10px;}
+.pad10a {padding: 0 10px;}
+.pad10b {padding: 10px 0;}
+
+.pad5 {padding: 5px;}
+.pad5a {padding: 0 5px;}
+.pad5b {padding: 5px 0;}
+
+.mar15 {margin: 15px;}
+.mar15a {margin: 0 15px;}
+.mar15b {margin: 15px 0;}
+
+.mar10 {margin: 10px;}
+.mar10a {margin: 0 10px;}
+.mar10b {margin: 10px 0;}
+
+.mar5 {margin: 5px;}
+.mar5a {margin: 0 5px;}
+.mar5b {margin: 5px 0;}
+
+/* to prevent float gap errs */
+.mar0 {margin: 0.1px;}
+.pad0 {padding: 0.1px;}
+
+/* colors */
+.col-tsp {color: transparent;}
+.bcol-tsp {background-color: transparent;}
+
+.cred {color: var(--red);}
+.bred {background-color: var(--red);}
+.cwhite {color: var(--white);}
+.bwhite {background-color: var(--white);}
+
+.col1 {color: var(--1);}
+.col2 {color: var(--2);}
+.col3 {color: var(--3);}
+.col4 {color: var(--4);}
+.col5 {color: var(--5);}
+.bcol1 {background-color: var(--1);}
+.bcol2 {background-color: var(--2);}
+.bcol3 {background-color: var(--3);}
+.bcol4 {background-color: var(--4);}
+.bcol5 {background-color: var(--5);}
+
+/* style resets */
+.res-input {border: none;}
+.res-input:focus {outline: none;}
+
+.res-button {border: none;}
+
+.res-scroll::-webkit-scrollbar {display: none;}
+.res-scroll {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+/* button styling & hover effects */
+.button {
+    transition: all 0.2s ease;
+    cursor: pointer;
+}
+
+.button.bcol1:hover {background-color: var(--1a);}
+.button.bcol2:hover {background-color: var(--2a);}
+.button.bcol3:hover {background-color: var(--3a);}
+.button.bcol4:hover {background-color: var(--4a);}
+.button.bcol5:hover {background-color: var(--5a);}
+
+.button.col1:hover {color: var(--1a);}
+.button.col2:hover {color: var(--2a);}
+.button.col3:hover {color: var(--3a);}
+.button.col4:hover {color: var(--4a);}
+.button.col5:hover {color: var(--5a);}
+
+.hov-ul:hover {text-decoration: underline;}
+.hov-lt:hover {text-decoration: line-through;}
+.hov-dt:hover {text-decoration: dotted;}
+.hov-db:hover {text-decoration: double;}
+.hov-ol:hover {text-decoration: overline;}
+.hov-wv:hover {text-decoration: wavy;}
+
+.button.cred:hover {color: var(--dred);}
+.button.bred:hover {background-color: var(--dred);}
+.button.cwhite:hover {color: var(--dhite);}
+.button.bwhite:hover {background-color: var(--dhite);}
+
+/* text sizes & styles*/
+.ts100 {font-size: 100px;}
+.ts75 {font-size: 75px;}
+.ts50 {font-size: 50px;}
+.ts40 {font-size: 40px;}
+.ts30 {font-size: 30px;}
+.ts25 {font-size: 25px;}
+.ts20 {font-size: 20px;}
+.ts15 {font-size: 15px;}
+.ts10 {font-size: 10px;}
+.ts5 {font-size: 5px;}
+
+.bold {font-weight: bold;}
+.bolder {font-weight: bolder;}
+.italic {font-style: italic;}
+
+.ovx-a {overflow-x: auto;}
+.ovx-h {overflow-x: hidden;}
+.ovy-a {overflow-y: auto;}
+.ovy-h {overflow-y: hidden;}
+
+.nowrap {white-space: nowrap;}
+
+.elipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.lineh100 {line-height: 100px;}
+.lineh75 {line-height: 75px;}
+.lineh50 {line-height: 50px;}
+.lineh40 {line-height: 40px;}
+.lineh30 {line-height: 30px;}
+.lineh25 {line-height: 25px;}
+.lineh20 {line-height: 20px;}
+.lineh15 {line-height: 15px;}
+.lineh10 {line-height: 10px;}
+.lineh5 {line-height: 5px;}
+
+/* true styles */
+.true-wrapper {min-height: 100vh;}
